                                        - "StrReplace" function for Windows "con" problem ( => ".con" )
          07-03-24  Bfo     procstuff   : "DoWait" is visible from outside
          07-03-24  Bfo     int_move    : "DoWait" loop for Windows "rename"
          
          07-03-24  Bfo     macfiles    : Linked hash support added
          07-03-30  Bfo     intcommand  : "ihit" extended for LINKED_HASH support
          07-03-31  Bfo     os9exec_nt  : LINKED_HASH support with 16384 entries
          07-03-31  Bfo     utilstuff   - LINKED_HASH support and bug fixes (NULL initialisation)
                                        - extended <liCnt> range
          07-03-31  Bfo     fileaccess  - LINKED_HASH support (by using <cond>)
                                        - Set_FileDate supported now for MacOSX
    3.37  07-04-??  Bfo
    ------------------- 
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux/MacOSX telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -  (SCSI subsystem for Linux)
    -   direct line editing on Linux (over network)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   termcap support for the DOS window.
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/